src/test/ui/impl-trait/unsafe-fn-in-closure-in-const-generic.thirunsafeck.stderr
error[E0133]: call to unsafe function is unsafe and requires unsafe function or block
  --> $DIR/unsafe-fn-in-closure-in-const-generic.rs:6:9
   |
LL |         std::mem::transmute::<(), ()>(());
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error[E0133]: call to unsafe function is unsafe and requires unsafe function or block
  --> $DIR/unsafe-fn-in-closure-in-const-generic.rs:15:9
   |
LL |         std::mem::transmute::<(), ()>(());
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error[E0133]: call to unsafe function is unsafe and requires unsafe function or block
  --> $DIR/unsafe-fn-in-closure-in-const-generic.rs:24:9
   |
LL |         std::mem::transmute::<(), ()>(());
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error[E0133]: call to unsafe function is unsafe and requires unsafe function or block
  --> $DIR/unsafe-fn-in-closure-in-const-generic.rs:33:9
   |
LL |         std::mem::transmute::<(), ()>(());
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0133`.
